1. add name check to prevent injection 2.add title and icon 3. update checksnat 4. update install.sh, check and ask before install dependency 5. update frontend
